--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "rimraf": "^2.6.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.3.2",
+    "underscore": "^1.8.3",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
   }
 }
