Edit npm script name

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rimraf ./dist && webpack -p",
     "postinstall": "typings install",
     "start-dev": "webpack-dev-server -d --inline --hot --progress --no-info --port 9000",
-    "start-prod": "node server.js"
+    "start": "node server.js"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.0.1",
