--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
   "dependencies": {
     "copy-webpack-plugin": "^4.0.1",
     "expose-loader": "^0.7.3",
-    "html-webpack-plugin": "^2.28.0",
-    "phaser": "^2.6.2",
-    "ts-loader": "^2.0.3",
-    "typescript": "^2.3.2",
+    "express": "^4.15.5",
+    "html-webpack-plugin": "^2.30.1",
+    "phaser-ce": "^2.8.8",
+    "rimraf": "^2.6.2",
+    "serve-static": "^1.12.6",
+    "ts-loader": "^2.3.7",
+    "typescript": "^2.5.2",
     "underscore": "^1.8.3",
-    "webpack": "^3.6.0",
-    "express": "^4.15.4",
-    "rimraf": "^2.6.1",
-    "serve-static": "^1.12.4",
-    "typings": "^2.1.1"
+    "webpack": "^3.6.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.8.2"
   }
 }
